--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -32,11 +32,11 @@
                 android:layout_height="90.0px"
                 android:layout_marginLeft="5.0px"
                 android:layout_marginTop="10.0px"
-                android:layout_marginEnd="5.0px"
                 android:src="@drawable/app_icon"
-                android:layout_marginStart="5.0dip"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentBottom="true"/>
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="5.0dip"
+                android:layout_marginEnd="5.0px"/>
             <LinearLayout
                 android:layout_gravity="center|top"
                 android:orientation="vertical"
