--- a/app/src/main/res/drawable/seekbar_thumb_pressed.xml
+++ b/app/src/main/res/drawable/seekbar_thumb_pressed.xml
@@ -3,8 +3,8 @@
     android:shape="oval"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/color_80FF0057" />
+        android:color="@color/color_ff000099" />
     <size
-        android:height="15dp"
-        android:width="15dp" />
+        android:height="15.0dip"
+        android:width="15.0dip" />
 </shape>
