--- a/app/src/main/res/drawable/shape_player_control_vod_seek_thumb_press.xml
+++ b/app/src/main/res/drawable/shape_player_control_vod_seek_thumb_press.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-<!--    进度条圆点按压状态颜色-->
-<!--    <solid android:color="@color/color_03DAC5" />-->
-    <solid android:color="@color/color_1890FF" />
+<shape
+    android:shape="oval"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid
+        android:color="@color/color_ff000099" />
     <size
-        android:width="@dimen/vs_30"
-        android:height="@dimen/vs_30" />
+        android:height="@dimen/vs_30"
+        android:width="@dimen/vs_30" />
 </shape>
