--- a/app/src/main/res/drawable/transparent.xml
+++ b/app/src/main/res/drawable/transparent.xml
@@ -12,7 +12,11 @@
     <item
         android:state_focused="true"
         android:state_pressed="false"
-        android:drawable="@drawable/seekbar_thumb_normal" />
+        android:drawable="@drawable/seekbar_thumb_pressed" />
+    <item
+        android:state_focused="false"
+        android:state_pressed="false"
+        android:drawable="@drawable/seekbar_thumb_normal" />        
     <item
         android:drawable="@drawable/seekbar_thumb_normal" />
 </selector>
