--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -130,6 +130,7 @@
             <LinearLayout
                 android:gravity="center"
                 android:orientation="horizontal"
+				android:id="@+id/pb_progressbar_xu"
                 android:paddingLeft="10.0dip"
                 android:paddingTop="0.0dip"
                 android:paddingRight="10.0dip"
