--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -20,6 +20,7 @@
         <LinearLayout
             android:layout_gravity="center|left|top"
             android:orientation="horizontal"
+			android:id="@+id/tv_left_top_xu"
             android:background="@drawable/shape_thumb_bottom_name"
             android:visibility="visible"
             android:layout_width="280.0px"
@@ -130,7 +131,6 @@
             <LinearLayout
                 android:gravity="center"
                 android:orientation="horizontal"
-				android:id="@+id/pb_progressbar_xu"
                 android:paddingLeft="10.0dip"
                 android:paddingTop="0.0dip"
                 android:paddingRight="10.0dip"
