--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -10,6 +10,77 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
     <LinearLayout
+        android:layout_gravity="center|left|top"
+        android:orientation="horizontal"
+        android:id="@+id/tv_left_top_xu"
+        android:background="@drawable/shape_thumb_bottom_name"
+        android:visibility="visible"
+        android:layout_width="280.0px"
+        android:layout_height="110.0px"
+        android:layout_marginTop="0.0px"
+        android:minWidth="270.0px">
+        <ImageView
+            android:id="@+id/iv_back_bg"
+            android:layout_width="90.0px"
+            android:layout_height="90.0px"
+            android:layout_marginLeft="5.0px"
+            android:layout_marginTop="10.0px"
+            android:src="@drawable/app_icon"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="5.0dip"
+            android:layout_marginEnd="5.0px"/>
+        <LinearLayout
+            android:layout_gravity="center|top"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <com.github.tvbox.osc.ui.tv.widget.MarqueeTextView
+                android:textSize="30.0px"
+                android:textColor="#fffcffff"
+                android:ellipsize="marquee"
+                android:layout_gravity="center"
+                android:id="@+id/tv_right_top_epg_name"
+                android:paddingLeft="0.0px"
+                android:paddingTop="10.0px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5.0dip"
+                android:layout_marginRight="5.0dip"
+                android:text="测试频道"
+                android:singleLine="true"
+                android:layout_toRightOf="@+id/iv_back_bg"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:paddingStart="5.0px"
+                android:layout_marginStart="5.0dip"
+                android:layout_marginEnd="5.0dip"/>
+            <TextView
+                android:textSize="30.0px"
+                android:textColor="#fffcffff"
+                android:ellipsize="marquee"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:id="@+id/tv_right_top_type"
+                android:paddingLeft="0.0px"
+                android:paddingBottom="5.0px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0.0dip"
+                android:layout_marginRight="0.0dip"
+                android:text="回看中"
+                android:singleLine="true"
+                android:layout_toRightOf="@+id/iv_back_bg"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:paddingStart="15.0px"
+                android:layout_marginStart="0.0dip"
+                android:layout_marginEnd="0.0dip"/>
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
         android:gravity="bottom"
         android:layout_gravity="bottom|center"
         android:orientation="vertical"
@@ -20,15 +91,13 @@
         <LinearLayout
             android:layout_gravity="center|left|top"
             android:orientation="horizontal"
-			android:id="@+id/tv_left_top_xu"
             android:background="@drawable/shape_thumb_bottom_name"
-            android:visibility="visible"
+            android:visibility="gone"
             android:layout_width="280.0px"
             android:layout_height="110.0px"
             android:layout_marginTop="0.0px"
             android:minWidth="270.0px">
             <ImageView
-                android:id="@+id/iv_back_bg"
                 android:layout_width="90.0px"
                 android:layout_height="90.0px"
                 android:layout_marginLeft="5.0px"
@@ -48,7 +117,6 @@
                     android:textColor="#fffcffff"
                     android:ellipsize="marquee"
                     android:layout_gravity="center"
-                    android:id="@+id/tv_right_top_epg_name"
                     android:paddingLeft="0.0px"
                     android:paddingTop="10.0px"
                     android:layout_width="wrap_content"
@@ -70,7 +138,6 @@
                     android:ellipsize="marquee"
                     android:gravity="center"
                     android:layout_gravity="center"
-                    android:id="@+id/tv_right_top_type"
                     android:paddingLeft="0.0px"
                     android:paddingBottom="5.0px"
                     android:layout_width="wrap_content"
